namespace Banks.Entities.Accounts
{
    public enum AccountType : byte
    {
        Debit,
        Deposit,
        Credit,
    }
}