namespace Banks.Entities.Transactions
{
    public enum TransactionStatus : byte
    {
        Performed,
        Canceled,
    }
}