namespace Banks.Entities.Transactions
{
    public enum TransactionType
    {
        Withdrawal,
        ToppingUp,
        Transfer,
    }
}